--- a/index.html
+++ b/index.html
@@ -3,18 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid Layout</title>
+  <title>Artist Network</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
-  </div>
+  <header>
+    <h1>Artist Network</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Artists</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="intro">
+    <h2>Welcome to Artist Network</h2>
+    <p>Connecting artists worldwide!</p>
+  </section>
+
+  <section class="artists">
+    <h2>Featured Artists</h2>
+    <div class="grid-container">
+      <div class="artist">
+        <img src="artist1.jpg" alt="Artist 1">
+        <h3>Artist Name</h3>
+        <p>Description of the artist.</p>
+      </div>
+      <div class="artist">
+        <img src="artist2.jpg" alt="Artist 2">
+        <h3>Artist Name</h3>
+        <p>Description of the artist.</p>
+      </div>
+      <!-- Add more artist divs here as needed -->
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 Artist Network. All rights reserved.</p>
+  </footer>
 </body>
 </html>
-
