--- a/index.html
+++ b/index.html
@@ -8,43 +8,56 @@
 </head>
 <body>
   <header>
-    <h1>Artist Network</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Artists</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>Artist Network</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Artists</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Login</a></li> <!-- Assuming login functionality -->
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <section class="intro">
-    <h2>Welcome to Artist Network</h2>
-    <p>Connecting artists worldwide!</p>
+    <div class="container">
+      <h2>Welcome to Artist Network</h2>
+      <p>Connecting artists worldwide!</p>
+    </div>
   </section>
 
   <section class="artists">
-    <h2>Featured Artists</h2>
-    <div class="grid-container">
-      <div class="artist">
-        <img src="artist1.jpg" alt="Artist 1">
-        <h3>Artist Name</h3>
-        <p>Description of the artist.</p>
+    <div class="container">
+      <h2>Featured Artists</h2>
+      <div class="grid-container">
+        <div class="artist">
+          <img src="artist1.jpg" alt="Artist 1">
+          <h3>Artist Name</h3>
+          <p>Description of the artist.</p>
+          <button class="network-btn">Connect</button> <!-- Example networking button -->
+        </div>
+        <div class="artist">
+          <img src="artist2.jpg" alt="Artist 2">
+          <h3>Artist Name</h3>
+          <p>Description of the artist.</p>
+          <button class="network-btn">Connect</button> <!-- Example networking button -->
+        </div>
+        <!-- Add more artist divs here as needed -->
       </div>
-      <div class="artist">
-        <img src="artist2.jpg" alt="Artist 2">
-        <h3>Artist Name</h3>
-        <p>Description of the artist.</p>
-      </div>
-      <!-- Add more artist divs here as needed -->
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Artist Network. All rights reserved.</p>
+    <div class="container">
+      <p>&copy; 2024 Artist Network. All rights reserved.</p>
+    </div>
   </footer>
+
+  <script src="script.js"></script> <!-- Assuming JavaScript for networking functionalities -->
 </body>
 </html>
