--- a/index.html
+++ b/index.html
@@ -52,12 +52,21 @@
     </div>
   </section>
 
+  <section class="models">
+    <div class="container">
+      <h2>3D Models</h2>
+      <!-- Example model viewer -->
+      <model-viewer src="path/to/your/3d-model.glb" alt="A 3D model" auto-rotate camera-controls></model-viewer>
+    </div>
+  </section>
+
   <footer>
     <div class="container">
       <p>&copy; 2024 Artist Network. All rights reserved.</p>
     </div>
   </footer>
 
+  <script src="https://modelviewer.dev/shared/model-viewer/model-viewer.min.js"></script> <!-- Include Google's Model Viewer library -->
   <script src="script.js"></script> <!-- Assuming JavaScript for networking functionalities -->
 </body>
 </html>
