--- a/index.html
+++ b/index.html
@@ -51,14 +51,11 @@
       </div>
     </div>
   </section>
+<!-- Import the component -->
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
 
-  <section class="models">
-    <div class="container">
-      <h2>3D Models</h2>
-      <!-- Example model viewer -->
-      <model-viewer src="path/to/your/3d-model.glb" alt="A 3D model" auto-rotate camera-controls></model-viewer>
-    </div>
-  </section>
+<!-- Use it like any other HTML element -->
+<model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="shared-assets/models/NeilArmstrong.glb" ar environment-image="shared-assets/environments/moon_1k.hdr" poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
 
   <footer>
     <div class="container">
