--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-<!-- Import the component -->
-<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-
-<!-- Use it like any other HTML element -->
-<model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="shared-assets/models/NeilArmstrong.glb" ar environment-image="shared-assets/environments/moon_1k.hdr" poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Google Model Viewer Example</title>
+  <!-- Include Google Model Viewer library -->
+  <script src="https://modelviewer.dev/shared/modelviewer.js"></script>
+</head>
+<body>
+  <h1>View Panghu Model</h1>
+  
+  <!-- Embed Google Model Viewer -->
+  <model-viewer
+    src="panghu.glb"
+    alt="A 3D model of Panghu"
+    auto-rotate
+    camera-controls
+    ar
+    ar-modes="webxr scene-viewer quick-look"
+    ios-src="URL_TO_PANGHU_GLB_FILE">
+  </model-viewer>
+</body>
+</html>
