--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google Model Viewer Example</title>
   <!-- Include Google Model Viewer library -->
-  <script src="https://modelviewer.dev/shared/modelviewer.js"></script>
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
 </head>
 <body>
   <h1>View Panghu Model</h1>
