--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <!-- Embed Google Model Viewer -->
   <model-viewer
-    src="panghu.glb"
+    src="test.glb"
     alt="A 3D model of Panghu"
     auto-rotate
     camera-controls
