--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
 </head>
 <body>
-  <h1>View Panghu Model</h1>
+  <h1>View Test Model</h1>
   
   <!-- Embed Google Model Viewer -->
   <model-viewer
